cmGeneratedFileStream: Use random temporary file extension by default

Avoid collisions with project-specified files named with `.tmp`.

Issue: #20873